# scaning-tool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  compose.dev.yaml  compose.yaml  fix-pdf-permissions.sh  main.py  pyproject.toml
.github/workflows/: autofix.yml  docker-image.yml
src/: app.py
